--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,71 @@
-/* You can add global styles to this file, and also import other style files */
+.has-same-height .card {
+    height: 320px;
+    overflow: hidden;
+}
+
+.card-content h3 {
+    text-align: center;
+}
+
+.table-profile td,
+th {
+    border: none !important;
+}
+
+.table-profile td:first-of-type {
+    font-weight: bold;
+}
+
+.skills-content .media {
+    margin: 0 !important;
+    padding: 4px !important;
+    border: 0 !important;
+}
+
+.skills-content .progress {
+    height: 4px !important;
+}
+
+.custom-tags {
+    text-align: center !important;
+    display: block;
+}
+
+.portfolio-container .card {
+    margin-bottom: 2em;
+}
+
+.section-heading {
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 6em;
+}
+.background {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+canvas {
+    display: block;
+    vertical-align: bottom;
+} /* ---- particles.js container ---- */
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    /* background-color: #b61924; */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+#qoute-of-day {
+    background-image: url("https://picsum.photos/200/300/?blur=2");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-weight: bolder;
+    /* filter: blur(8px); */
+}
