--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -5,13 +5,14 @@
             <span>Kumaran</span>
         </a>
 
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample"
+            (click)="status=!status" [ngClass]="status ? 'is-active' : ''">
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
             <span aria-hidden="true"></span>
         </a>
     </div>
-    <div id="navbarExampleTransparentExample" class="navbar-menu">
+    <div id="navbarExampleTransparentExample" class="navbar-menu" [ngClass]="status ? 'is-active' : ''">
         <div class="navbar-end">
             <a class="navbar-item" routerLink="/about" routerLinkActive="is-active">
                 <span class="icon">
