--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,8 +1,9 @@
 <nav class="navbar is-link is-fixed-top">
     <div class="navbar-brand">
         <a class="navbar-item" routerLink="">
-            <img src="favicon.ico" height="28">
-            <span>Kumaran</span>
+            <figure class="image">
+                <img src="assets/logo.jpg">
+            </figure>
         </a>
 
         <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample"
