--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,7 +4,7 @@
         <h3 class="title is-2">About Me</h3>
         <h4 class="subtitle is-5">Jack of all trades, master of "some"</h4>
         <div class="container">
-            <p>Web developer with more than <strong> <span id="yrsOfExp"></span> years</strong> of well-rounded
+            <p>Web developer with more than <strong> <span id="yrsOfExp">{{yearsofExperience}}</span> years</strong> of well-rounded
                 experience with a degree in the field of
                 <strong>Mechanical Engineering</strong>, extensive knowledge of modern Web techniques and love for
                 <strong>Coffee</strong>. Looking for an opportunity to work and upgrade, as well as being involved in an
